    - Closes #5332. 
  - Fix Status Screen components' hovering bleeding over into blank spaces further along the line.
    - Closes #5332.
0.97.2.5:
  - Add nation's capital to the nation status screen.
  - Add protection for glow berries being harvest off cave vines.
    - Treated as a destroy test.
  - Prevent outlaws from being able to join towns, courtesy of Warriorrrr with PR #5329.
  - Add town join date to a resident's status screen in the town hover section.
    - Closes #5282.
  - Bump language files to 0.126.
  - Add nation join date to a town's status screen in the nation hover section.
  - Fix welcome message only being seen by the newly joined player.
  - Add  ability to override a town's NationZone.
    - Closes #4915.
  - New Command: /ta set nationzoneoverride [town] [size]
    - Sets a town's nationzone override.
  - New Permission Node: towny.command.townyadmin.set.nationzoneoverride
    - Child node of towny.command.townyadmin.set.*
  - Fix backup cleaning not working, courtesy of Warriorrrr with PR #5337.
  - Use Java NIO instead of File, courtesy of Articdive with PR #5316.
0.97.2.6:
  - Fix global messages that lost their Towny prefix.
  - Bump language file to 0.127.
  - Add nation zone size to nation and town status screens.
  - Add hover to the capital on the nation status screen.
  - Clean up TownyMessaging class.
  - Use server provided gson instead of shading our own, courtesy of Warriorrrr with PR #5347.
  - Tidy & rename /ta delete, courtesy of Warriorrrr with PR #5351.
  - Removed command: /ta delete {residentname}
  - New Command: /ta resident {residentname} delete. 
  - Enhance the /res list command, courtesy of Warriorrrr with PR #5350.
  - Fix updating reference lang files, an issue on select operating systems.
  - Blank capital prefixes and postfixes will no longer override a town's normal prefix and postfix.