@@ -6818,3 +6818,4 @@ v0.92.0.11:
   - Enhance the /res list command, courtesy of Warriorrrr with PR #5350.
   - Fix updating reference lang files, an issue on select operating systems.
   - Blank capital prefixes and postfixes will no longer override a town's normal prefix and postfix.
+  - Blank king prefixes and postfixes will no longer override a mayor's normal prefix and postfix.
